--- a/css/global_styles.css
+++ b/css/global_styles.css
@@ -51,10 +51,12 @@
     vertical-align: middle;
   }
 .col {
-    margin: 20px;
+    margin-top: 20px;
+    display: grid;
+    place-items: center;
     
 }
 
 .card {
-    margin: 0 30px 30px 0;
+    margin: 0 30px 30px 40px;
 }
