--- a/css/global_styles.css
+++ b/css/global_styles.css
@@ -52,11 +52,10 @@
   }
 .col {
     margin-top: 20px;
-    display: grid;
-    place-items: center;
-    
+    padding: 15px;
 }
 
 .card {
-    margin: 0 30px 30px 40px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
