--- a/css/global_styles.css
+++ b/css/global_styles.css
@@ -1,6 +1,9 @@
 
 @import url('https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css');
-
+body {
+  background: linear-gradient(135deg, #f0f0f0, #e0e0e0);
+  overflow-x: hidden;
+}
 .navbar {
     background-color: #343a40;
   }
@@ -34,6 +37,9 @@
     height: 40px;
     border-radius: 50%;
   }
+.navbar-brand i {
+  color: goldenrod;
+}
   .navbar-links a {
     color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -58,4 +64,14 @@
 .card {
     margin-right: 30px;
     margin-bottom: 30px;
+    display: flex; /* Enable flexbox for the card */
+    flex-direction: column; /* Align children vertically */
+}
+.list-group-item {
+  display: flex; /* Use flexbox to align items */
+  align-items: center; /* Center align the items vertically */
+}
+
+.card-body {
+  flex-grow: 1; /* Allow the body to grow and fill the space */
 }
